; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_smart_protocol.c_recv_pkt.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_smart_protocol.c_recv_pkt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i8*, i32 }

@GIT_EBUFS = common dso_local global i32 0, align 4
@GIT_ERROR_NET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"early EOF\00", align 1
@GIT_EEOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__**, i32*, %struct.TYPE_9__*)* @recv_pkt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @recv_pkt(%struct.TYPE_10__** %0, i32* %1, %struct.TYPE_9__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_10__**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_10__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_10__** %0, %struct.TYPE_10__*** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %7, align 8
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %8, align 8
  %16 = load i8*, i8** %8, align 8
  store i8* %16, i8** %9, align 8
  store %struct.TYPE_10__* null, %struct.TYPE_10__** %10, align 8
  store i32 0, i32* %11, align 4
  br label %17

17:                                               ; preds = %58, %3
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 8
  %21 = icmp sgt i32 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %17
  %23 = load i8*, i8** %8, align 8
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @git_pkt_parse_line(%struct.TYPE_10__** %10, i8** %9, i8* %23, i32 %26)
  store i32 %27, i32* %11, align 4
  br label %30

28:                                               ; preds = %17
  %29 = load i32, i32* @GIT_EBUFS, align 4
  store i32 %29, i32* %11, align 4
  br label %30

30:                                               ; preds = %28, %22
  %31 = load i32, i32* %11, align 4
  %32 = icmp eq i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %30
  br label %61

34:                                               ; preds = %30
  %35 = load i32, i32* %11, align 4
  %36 = icmp slt i32 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %34
  %38 = load i32, i32* %11, align 4
  %39 = load i32, i32* @GIT_EBUFS, align 4
  %40 = icmp ne i32 %38, %39
  br i1 %40, label %41, label %43

41:                                               ; preds = %37
  %42 = load i32, i32* %11, align 4
  store i32 %42, i32* %4, align 4
  br label %83

43:                                               ; preds = %37, %34
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %45 = call i32 @gitno_recv(%struct.TYPE_9__* %44)
  store i32 %45, i32* %12, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %43
  %48 = load i32, i32* %12, align 4
  store i32 %48, i32* %4, align 4
  br label %83

49:                                               ; preds = %43
  %50 = load i32, i32* %12, align 4
  %51 = icmp eq i32 %50, 0
  br i1 %51, label %52, label %56

52:                                               ; preds = %49
  %53 = load i32, i32* @GIT_ERROR_NET, align 4
  %54 = call i32 @git_error_set(i32 %53, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %55 = load i32, i32* @GIT_EEOF, align 4
  store i32 %55, i32* %4, align 4
  br label %83

56:                                               ; preds = %49
  br label %57

57:                                               ; preds = %56
  br label %58

58:                                               ; preds = %57
  %59 = load i32, i32* %11, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %17, label %61

61:                                               ; preds = %58, %33
  %62 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %63 = load i8*, i8** %9, align 8
  %64 = call i32 @gitno_consume(%struct.TYPE_9__* %62, i8* %63)
  %65 = load i32*, i32** %6, align 8
  %66 = icmp ne i32* %65, null
  br i1 %66, label %67, label %72

67:                                               ; preds = %61
  %68 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %69 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %68, i32 0, i32 0
  %70 = load i32, i32* %69, align 4
  %71 = load i32*, i32** %6, align 8
  store i32 %70, i32* %71, align 4
  br label %72

72:                                               ; preds = %67, %61
  %73 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %74 = icmp ne %struct.TYPE_10__** %73, null
  br i1 %74, label %75, label %78

75:                                               ; preds = %72
  %76 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %77 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  store %struct.TYPE_10__* %76, %struct.TYPE_10__** %77, align 8
  br label %81

78:                                               ; preds = %72
  %79 = load %struct.TYPE_10__*, %struct.TYPE_10__** %10, align 8
  %80 = call i32 @git__free(%struct.TYPE_10__* %79)
  br label %81

81:                                               ; preds = %78, %75
  %82 = load i32, i32* %11, align 4
  store i32 %82, i32* %4, align 4
  br label %83

83:                                               ; preds = %81, %52, %47, %41
  %84 = load i32, i32* %4, align 4
  ret i32 %84
}

declare dso_local i32 @git_pkt_parse_line(%struct.TYPE_10__**, i8**, i8*, i32) #1

declare dso_local i32 @gitno_recv(%struct.TYPE_9__*) #1

declare dso_local i32 @git_error_set(i32, i8*) #1

declare dso_local i32 @gitno_consume(%struct.TYPE_9__*, i8*) #1

declare dso_local i32 @git__free(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
